# bandwhichd-agent

./: .dockerignore  .gitignore  Cargo.toml  LICENSE.md  build-debian-amd64.Dockerfile  build-packages.sh  build-suse-amd64.Dockerfile  debian-10-build.Dockerfile  debian-11-build.Dockerfile  debian-8-build.Dockerfile  debian-9-build.Dockerfile  debian-build-amd64.Dockerfile
packaging/debian-10/files/DEBIAN/: control  postinst
packaging/debian-11/files/DEBIAN/: control  prerm
packaging/debian-11/files/usr/share/doc/bandwhichd-agent/: copyright
packaging/debian-8/files/DEBIAN/: control
packaging/debian-9/files/DEBIAN/: control
packaging/debian-9/files/etc/bandwhichd-agent/: bandwhichd-agent.env
packaging/debian-9/files/lib/systemd/system/: bandwhichd-agent.service
packaging/debian/files/DEBIAN/: conffiles  control  postrm
packaging/suse/: .rpmlintrc  .rpmmacros
packaging/suse/files/SPECS/: bandwhichd-agent.spec
src/: agent_id.rs  machine_id.rs  main.rs  os_release.rs  publish.rs
src/network/: connection.rs  sniffer.rs  utilization.rs
src/os/: errors.rs  mod.rs  shared.rs
src/publish/: mod.rs
