[package]
edition = "2018"
name = "bandwhichd-agent"
description = "bandwhichd agent publishing measurements"
version = "0.34.0"
homepage = "https://github.com/neuland/bandwhichd-agent"
repository = "https://github.com/neuland/bandwhichd-agent"
readme = "README.md"
keywords = ["networking", "utilization", "agent"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
failure = "0.1.8"
gethostname = "0.2.3"
ipnetwork = "0.18.0"
libsystemd = "0.5.0"
pnet = "0.29.0"
procfs = "0.12.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha3 = "0.10.1"
time = { version = "0.3.9", features = ["macros", "serde-well-known"] }
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "serde", "macro-diagnostics"] }

[dev-dependencies]
assert-json-diff = "2.0.1"
pnet_sys = "0.29.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true